--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "amazon-cognito-identity-js": "^5.2.10",
     "aws-sdk": "^2.1192.0",
-    "jsonwebtoken": "^8.5.1",
-    "jwk-to-pem": "^2.0.5",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "node-fetch": "^2.6.7",
     "request": "^2.88.2"
   }
