--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
     "express-session": "^1.17.3",
     "node-fetch": "^2.6.7",
     "request": "^2.88.2"
+  },
+  
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
