--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "firebase-admin": "^11.0.1",
     "node-fetch": "^2.6.7",
     "request": "^2.88.2"
   },
