--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "aws-sdk": "^2.1192.0",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "firebase-admin": "^11.0.1",
     "node-fetch": "^2.6.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "twilio": "^3.80.1"
   },
   "scripts": {
     "start": "nodemon index.js"
