--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.17.3",
     "firebase-admin": "^11.0.1",
     "node-fetch": "^2.6.7",
+    "nodemailer": "^6.7.8",
     "request": "^2.88.2",
     "twilio": "^3.80.1"
   },
