--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "twilio": "^3.80.1"
   },
   "scripts": {
-    "start": "node fileName.js",
-    "start:dev": "nodemon fileName.js"
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
